# KDevelop-Build-Switcher

./: .gitignore  Build_Switcher.kdev4  CMakeLists.txt  README.md  build_switcher.categories
src/: CMakeLists.txt  build_switcher.cpp  build_switcher.h  build_switcher.json  tool_widget.cpp  tool_widget.hpp
